--- a/Page.css
+++ b/Page.css
@@ -72,3 +72,9 @@ body {
     margin: 10px;
     color: #888;
 }
+.Movies {
+  display: flex;           /* active flexbox */
+  justify-content: start; /* aligne horizontalement : flex-start, flex-end, space-between */
+  gap: 10px;               /* espace entre les éléments */
+  height: 400px;           /* pour montrer l'alignement vertical */
+}
