--- a/css/Page.css
+++ b/css/Page.css
@@ -11,7 +11,11 @@ body {
     text-align: center;
     margin-top: 20px;
 }
-
+.texte-contact{
+    color: #1C4412;
+    text-align: center;
+    margin-top: 20px;
+}
 .petits-texte {
     font-family: 'Roboto', sans-serif;
     text-align: center;
