--- a/acceuil.css
+++ b/acceuil.css
@@ -158,7 +158,7 @@ body {
     transform: scale(1.1);
     box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.4);
 }
-#fun-fact-section {
+#citation {
     margin: 40px auto;
     padding: 20px;
     background: rgba(114, 161, 107, 0.1);
@@ -168,12 +168,12 @@ body {
     color: #1C4412;
 }
 
-#fun-fact-section h3 {
+#citation h3 {
     margin-bottom: 10px;
     font-size: 1.5rem;
 }
 
-#fun-fact-section p {
+#citation p {
     font-size: 1.1rem;
     line-height: 1.5;
 }
