--- a/acceuil.css
+++ b/acceuil.css
@@ -158,7 +158,7 @@ body {
     transform: scale(1.1);
     box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.4);
 }
-#citation {
+#fun-fact-section {
     margin: 40px auto;
     padding: 20px;
     background: rgba(114, 161, 107, 0.1);
